dev-3.x-jb-launcher: revised application property names added ConfigurationProvider interface and implementations revised SetupTask and Command APIs to use Configuration from mtwilson-util-configuration